feat: Add bmi270 temp_read null pointer protection unit test

--- a/tests/gtest/controller/bmi270/CMakeLists.txt
+++ b/tests/gtest/controller/bmi270/CMakeLists.txt
@@ -16,6 +16,7 @@ add_subdirectory(gyr_set_x)
 add_subdirectory(gyr_set_y)
 add_subdirectory(gyr_set_z)
 add_subdirectory(temp_get)
+add_subdirectory(temp_read)
 add_subdirectory(temp_set)
 add_subdirectory(time_get)
 add_subdirectory(time_read)
