feat: Add bmi270 gyr_slf_tst null pointer protection unit test

--- a/tests/gtest/controller/bmi270/CMakeLists.txt
+++ b/tests/gtest/controller/bmi270/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(gyr_get_x)
 add_subdirectory(gyr_get_y)
 add_subdirectory(gyr_get_z)
 add_subdirectory(gyr_read)
+add_subdirectory(gyr_slf_tst)
 add_subdirectory(gyr_set_x)
 add_subdirectory(gyr_set_y)
 add_subdirectory(gyr_set_z)
