feat: Add bmi270 soft_rst procedure and null pointer protection unit tests

--- a/tests/gtest/controller/bmi270/CMakeLists.txt
+++ b/tests/gtest/controller/bmi270/CMakeLists.txt
@@ -23,5 +23,6 @@ add_subdirectory(temp_set)
 add_subdirectory(time_get)
 add_subdirectory(time_read)
 add_subdirectory(time_set)
+add_subdirectory(soft_rst)
 add_subdirectory(stat_get)
 add_subdirectory(stat_set)
