--- a/tests/gtest/controller/bmi270/CMakeLists.txt
+++ b/tests/gtest/controller/bmi270/CMakeLists.txt
@@ -24,5 +24,6 @@ add_subdirectory(time_get)
 add_subdirectory(time_read)
 add_subdirectory(time_set)
 add_subdirectory(soft_rst)
+add_subdirectory(spi_ctrl_asg)
 add_subdirectory(stat_get)
 add_subdirectory(stat_set)
