feat: Add bmi270 init null pointer protection unit test

--- a/tests/gtest/controller/bmi270/CMakeLists.txt
+++ b/tests/gtest/controller/bmi270/CMakeLists.txt
@@ -17,6 +17,7 @@ add_subdirectory(gyr_slf_tst)
 add_subdirectory(gyr_set_x)
 add_subdirectory(gyr_set_y)
 add_subdirectory(gyr_set_z)
+add_subdirectory(init)
 add_subdirectory(temp_get)
 add_subdirectory(temp_read)
 add_subdirectory(temp_set)
