fix: Apply new bmi270_pwr_mode_get_conf function name to unit tests

--- a/tests/gtest/controller/bmi270/CMakeLists.txt
+++ b/tests/gtest/controller/bmi270/CMakeLists.txt
@@ -8,7 +8,6 @@ add_subdirectory(acc_set_y)
 add_subdirectory(acc_set_z)
 add_subdirectory(deinit)
 add_subdirectory(get_dev)
-add_subdirectory(get_pwr_mode_conf)
 add_subdirectory(gyr_get_x)
 add_subdirectory(gyr_get_y)
 add_subdirectory(gyr_get_z)
@@ -18,6 +17,7 @@ add_subdirectory(gyr_set_x)
 add_subdirectory(gyr_set_y)
 add_subdirectory(gyr_set_z)
 add_subdirectory(init)
+add_subdirectory(pwr_mode_get_conf)
 add_subdirectory(pwr_mode_set)
 add_subdirectory(temp_get)
 add_subdirectory(temp_read)
