feat: Update bmi270 CMakeLists with adjusted tests

--- a/tests/gtest/controller/bmi270/CMakeLists.txt
+++ b/tests/gtest/controller/bmi270/CMakeLists.txt
@@ -7,15 +7,15 @@ add_subdirectory(acc_set_y)
 add_subdirectory(acc_set_z)
 add_subdirectory(acc_slf_tst)
 add_subdirectory(deinit)
-#add_subdirectory(get_dev)
-#add_subdirectory(gyr_get_x)
-#add_subdirectory(gyr_get_y)
-#add_subdirectory(gyr_get_z)
-#add_subdirectory(gyr_read)
+add_subdirectory(dev_get)
+add_subdirectory(gyr_get_x)
+add_subdirectory(gyr_get_y)
+add_subdirectory(gyr_get_z)
+add_subdirectory(gyr_read)
+add_subdirectory(gyr_set_x)
+add_subdirectory(gyr_set_y)
+add_subdirectory(gyr_set_z)
 #add_subdirectory(gyr_slf_tst)
-#add_subdirectory(gyr_set_x)
-#add_subdirectory(gyr_set_y)
-#add_subdirectory(gyr_set_z)
 #add_subdirectory(init)
 #add_subdirectory(pwr_mode_get_conf)
 #add_subdirectory(pwr_mode_set)
