--- a/tests/gtest/controller/bmi270/CMakeLists.txt
+++ b/tests/gtest/controller/bmi270/CMakeLists.txt
@@ -15,10 +15,10 @@ add_subdirectory(gyr_read)
 add_subdirectory(gyr_set_x)
 add_subdirectory(gyr_set_y)
 add_subdirectory(gyr_set_z)
-#add_subdirectory(gyr_slf_tst)
-#add_subdirectory(init)
-#add_subdirectory(pwr_mode_get_conf)
-#add_subdirectory(pwr_mode_set)
+add_subdirectory(gyr_slf_tst)
+add_subdirectory(init)
+add_subdirectory(pwr_mode_get_conf)
+add_subdirectory(pwr_mode_set)
 #add_subdirectory(temp_get)
 #add_subdirectory(temp_read)
 #add_subdirectory(temp_set)
