feat: Update bmi270 CMakeLists with adjusted tests

--- a/tests/gtest/controller/bmi270/CMakeLists.txt
+++ b/tests/gtest/controller/bmi270/CMakeLists.txt
@@ -19,13 +19,13 @@ add_subdirectory(gyr_slf_tst)
 add_subdirectory(init)
 add_subdirectory(pwr_mode_get_conf)
 add_subdirectory(pwr_mode_set)
-#add_subdirectory(temp_get)
-#add_subdirectory(temp_read)
-#add_subdirectory(temp_set)
-#add_subdirectory(time_get)
-#add_subdirectory(time_read)
-#add_subdirectory(time_set)
-#add_subdirectory(soft_rst)
-#add_subdirectory(spi_ctrl_asg)
-#add_subdirectory(stat_get)
-#add_subdirectory(stat_set)
+add_subdirectory(soft_rst)
+add_subdirectory(spi_ctrl_asg)
+add_subdirectory(stat_get)
+add_subdirectory(stat_set)
+add_subdirectory(temp_get)
+add_subdirectory(temp_read)
+add_subdirectory(temp_set)
+add_subdirectory(time_get)
+add_subdirectory(time_read)
+add_subdirectory(time_set)
