--- a/bootloader/CMakeLists.txt
+++ b/bootloader/CMakeLists.txt
@@ -39,6 +39,7 @@ target_include_directories(
     PRIVATE
     ${PROJECT_SOURCE_DIR}/memory/stm32f722xx
     ${PROJECT_SOURCE_DIR}/submodules/libopencm3/include
+    ${PROJECT_SOURCE_DIR}/shared
     )
 
 message(STATUS "Add first_bootloader target compile definitions")
